# eeg

./: .gitmodules  pyproject.toml
src/eeg/: __main__.py
