[project]
name = "eeg"
version = "0.1.0"
description = "Classifying patients using EEGNet on EEG dataset"
authors = [
    {name = "Halvor Kvamme", email = "flkz@proton.me"},
]
dependencies = [
    "tensorflow>=2.13",
    "mne",
    "scikit-learn",
    "matplotlib"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "None"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
eeg = "eeg.__main__:main"
